Fix overlapping book images for medium devices sizes

--- a/css/books.css
+++ b/css/books.css
@@ -1,33 +1,28 @@
-
 h2 {
   text-align: center;
-  margin:40px 32px;
+  margin: 40px 32px;
 }
 
-.row{
-	margin-top: 50px;
-	}
+.row {
+  margin-top: 50px;
+}
 
 .books {
-	 padding: 40px;
-};
+  padding: 40px;
+}
 
 .card {
   font-family: Helvetica, Arial, sans-serif;
   margin-bottom: 28px;
 }
 
-.card img{
-	height : 400px;
-	width: 233px;
-	
-}
 .card h3 {
   font-size: 15px;
   color: #263238;
 }
 
-.card a, .card p {
+.card a,
+.card p {
   color: #263238;
   font-size: 16px;
 }
